[cli] Use an arg file to share common JVM options between wrappers