@@ -178,12 +178,12 @@ if not exist "%AMPER_JAVA_HOME%\bin\java.exe" (
 
 REM ********** Launch Amper **********
 
-set jvm_args=-ea -XX:+EnableDynamicAgentLoading %AMPER_JAVA_OPTIONS%
 "%AMPER_JAVA_HOME%\bin\java.exe" ^
+  @"%amper_target_dir%\amper.args" ^
   "-Damper.wrapper.dist.sha256=%amper_sha256%" ^
   "-Damper.dist.path=%amper_target_dir%" ^
   "-Damper.wrapper.path=%~f0" ^
-  %jvm_args% ^
+  %AMPER_JAVA_OPTIONS% ^
   -cp "%amper_target_dir%\lib\*" ^
   org.jetbrains.amper.cli.MainKt ^
   %*
